v3.0.0/_sources/plugins/pnp_global_settings_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.pnp_global_settings_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.pnp_global_settings -- Resource module for Pnp Global Settings
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.0.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.pnp_global_settings`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operation update of the resource Pnp Global Settings.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="4">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="4">
                    <div class="ansibleOptionAnchor" id="parameter-_id"></div>
                    <b>_id</b>
                    <a class="ansibleOptionLink" href="#parameter-_id" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s _id.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="4">
                    <div class="ansibleOptionAnchor" id="parameter-aaaCredentials"></div>
                    <b>aaaCredentials</b>
                    <a class="ansibleOptionLink" href="#parameter-aaaCredentials" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s aaaCredentials.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-aaaCredentials/password"></div>
                    <b>password</b>
                    <a class="ansibleOptionLink" href="#parameter-aaaCredentials/password" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s password.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-aaaCredentials/username"></div>
                    <b>username</b>
                    <a class="ansibleOptionLink" href="#parameter-aaaCredentials/username" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s username.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="4">
                    <div class="ansibleOptionAnchor" id="parameter-acceptEula"></div>
                    <b>acceptEula</b>
                    <a class="ansibleOptionLink" href="#parameter-acceptEula" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>AcceptEula flag.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="4">
                    <div class="ansibleOptionAnchor" id="parameter-defaultProfile"></div>
                    <b>defaultProfile</b>
                    <a class="ansibleOptionLink" href="#parameter-defaultProfile" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s defaultProfile.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-defaultProfile/cert"></div>
                    <b>cert</b>
                    <a class="ansibleOptionLink" href="#parameter-defaultProfile/cert" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s cert.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-defaultProfile/fqdnAddresses"></div>
                    <b>fqdnAddresses</b>
                    <a class="ansibleOptionLink" href="#parameter-defaultProfile/fqdnAddresses" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s fqdnAddresses.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-defaultProfile/ipAddresses"></div>
                    <b>ipAddresses</b>
                    <a class="ansibleOptionLink" href="#parameter-defaultProfile/ipAddresses" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s ipAddresses.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-defaultProfile/port"></div>
                    <b>port</b>
                    <a class="ansibleOptionLink" href="#parameter-defaultProfile/port" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s port.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-defaultProfile/proxy"></div>
                    <b>proxy</b>
                    <a class="ansibleOptionLink" href="#parameter-defaultProfile/proxy" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Proxy flag.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="4">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList"></div>
                    <b>savaMappingList</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s savaMappingList.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/autoSyncPeriod"></div>
                    <b>autoSyncPeriod</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/autoSyncPeriod" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s autoSyncPeriod.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/ccoUser"></div>
                    <b>ccoUser</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/ccoUser" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s ccoUser.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/expiry"></div>
                    <b>expiry</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/expiry" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s expiry.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/lastSync"></div>
                    <b>lastSync</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/lastSync" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s lastSync.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/profile"></div>
                    <b>profile</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/profile" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s profile.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/profile/addressFqdn"></div>
                    <b>addressFqdn</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/profile/addressFqdn" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s addressFqdn.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/profile/addressIpV4"></div>
                    <b>addressIpV4</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/profile/addressIpV4" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s addressIpV4.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/profile/cert"></div>
                    <b>cert</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/profile/cert" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s cert.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/profile/makeDefault"></div>
                    <b>makeDefault</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/profile/makeDefault" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>MakeDefault flag.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/profile/name"></div>
                    <b>name</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/profile/name" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s name.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/profile/port"></div>
                    <b>port</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/profile/port" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s port.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/profile/profileId"></div>
                    <b>profileId</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/profile/profileId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s profileId.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/profile/proxy"></div>
                    <b>proxy</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/profile/proxy" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                        <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Proxy flag.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/smartAccountId"></div>
                    <b>smartAccountId</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/smartAccountId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s smartAccountId.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/syncResult"></div>
                    <b>syncResult</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/syncResult" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s syncResult.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/syncResult/syncList"></div>
                    <b>syncList</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/syncResult/syncList" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s syncList.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/syncResult/syncList/deviceSnList"></div>
                    <b>deviceSnList</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/syncResult/syncList/deviceSnList" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s deviceSnList.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/syncResult/syncList/syncType"></div>
                    <b>syncType</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/syncResult/syncList/syncType" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s syncType.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                    <td class="elbow-placeholder"></td>
                                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/syncResult/syncMsg"></div>
                    <b>syncMsg</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/syncResult/syncMsg" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s syncMsg.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/syncResultStr"></div>
                    <b>syncResultStr</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/syncResultStr" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s syncResultStr.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/syncStartTime"></div>
                    <b>syncStartTime</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/syncStartTime" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s syncStartTime.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/syncStatus"></div>
                    <b>syncStatus</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/syncStatus" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s syncStatus.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/tenantId"></div>
                    <b>tenantId</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/tenantId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s tenantId.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/token"></div>
                    <b>token</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/token" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s token.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-savaMappingList/virtualAccountId"></div>
                    <b>virtualAccountId</b>
                    <a class="ansibleOptionLink" href="#parameter-savaMappingList/virtualAccountId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s virtualAccountId.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="4">
                    <div class="ansibleOptionAnchor" id="parameter-taskTimeOuts"></div>
                    <b>taskTimeOuts</b>
                    <a class="ansibleOptionLink" href="#parameter-taskTimeOuts" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s taskTimeOuts.</div>
                                                        </td>
            </tr>
                                        <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-taskTimeOuts/configTimeOut"></div>
                    <b>configTimeOut</b>
                    <a class="ansibleOptionLink" href="#parameter-taskTimeOuts/configTimeOut" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s configTimeOut.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-taskTimeOuts/generalTimeOut"></div>
                    <b>generalTimeOut</b>
                    <a class="ansibleOptionLink" href="#parameter-taskTimeOuts/generalTimeOut" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s generalTimeOut.</div>
                                                        </td>
            </tr>
                                <tr>
                                                    <td class="elbow-placeholder"></td>
                                                <td colspan="3">
                    <div class="ansibleOptionAnchor" id="parameter-taskTimeOuts/imageDownloadTimeOut"></div>
                    <b>imageDownloadTimeOut</b>
                    <a class="ansibleOptionLink" href="#parameter-taskTimeOuts/imageDownloadTimeOut" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s imageDownloadTimeOut.</div>
                                                        </td>
            </tr>
                    
                                <tr>
                                                                <td colspan="4">
                    <div class="ansibleOptionAnchor" id="parameter-tenantId"></div>
                    <b>tenantId</b>
                    <a class="ansibleOptionLink" href="#parameter-tenantId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s tenantId.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="4">
                    <div class="ansibleOptionAnchor" id="parameter-version"></div>
                    <b>version</b>
                    <a class="ansibleOptionLink" href="#parameter-version" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">integer</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Pnp Global Settings&#x27;s version.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Pnp Global Settings reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Pnp Global Settings object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Update all
      cisco.dnac.pnp_global_settings:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        state: present
        _id: string
        aaaCredentials:
          password: string
          username: string
        acceptEula: true
        defaultProfile:
          cert: string
          fqdnAddresses:
          - string
          ipAddresses:
          - string
          port: 0
          proxy: true
        savaMappingList:
        - autoSyncPeriod: 0
          ccoUser: string
          expiry: 0
          lastSync: 0
          profile:
            addressFqdn: string
            addressIpV4: string
            cert: string
            makeDefault: true
            name: string
            port: 0
            profileId: string
            proxy: true
          smartAccountId: string
          syncResult:
            syncList:
            - deviceSnList:
              - string
              syncType: string
            syncMsg: string
          syncResultStr: string
          syncStartTime: 0
          syncStatus: string
          tenantId: string
          token: string
          virtualAccountId: string
        taskTimeOuts:
          configTimeOut: 0
          generalTimeOut: 0
          imageDownloadTimeOut: 0
        tenantId: string
        version: 0





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;savaMappingList&quot;: [
        {
          &quot;syncStatus&quot;: &quot;string&quot;,
          &quot;syncStartTime&quot;: 0,
          &quot;syncResult&quot;: {
            &quot;syncList&quot;: [
              {
                &quot;syncType&quot;: &quot;string&quot;,
                &quot;deviceSnList&quot;: [
                  &quot;string&quot;
                ]
              }
            ],
            &quot;syncMsg&quot;: &quot;string&quot;
          },
          &quot;lastSync&quot;: 0,
          &quot;tenantId&quot;: &quot;string&quot;,
          &quot;profile&quot;: {
            &quot;port&quot;: 0,
            &quot;addressIpV4&quot;: &quot;string&quot;,
            &quot;addressFqdn&quot;: &quot;string&quot;,
            &quot;profileId&quot;: &quot;string&quot;,
            &quot;proxy&quot;: true,
            &quot;makeDefault&quot;: true,
            &quot;cert&quot;: &quot;string&quot;,
            &quot;name&quot;: &quot;string&quot;
          },
          &quot;token&quot;: &quot;string&quot;,
          &quot;expiry&quot;: 0,
          &quot;ccoUser&quot;: &quot;string&quot;,
          &quot;smartAccountId&quot;: &quot;string&quot;,
          &quot;virtualAccountId&quot;: &quot;string&quot;,
          &quot;autoSyncPeriod&quot;: 0,
          &quot;syncResultStr&quot;: &quot;string&quot;
        }
      ],
      &quot;taskTimeOuts&quot;: {
        &quot;imageDownloadTimeOut&quot;: 0,
        &quot;configTimeOut&quot;: 0,
        &quot;generalTimeOut&quot;: 0
      },
      &quot;tenantId&quot;: &quot;string&quot;,
      &quot;aaaCredentials&quot;: {
        &quot;password&quot;: &quot;string&quot;,
        &quot;username&quot;: &quot;string&quot;
      },
      &quot;defaultProfile&quot;: {
        &quot;fqdnAddresses&quot;: [
          &quot;string&quot;
        ],
        &quot;proxy&quot;: true,
        &quot;cert&quot;: &quot;string&quot;,
        &quot;ipAddresses&quot;: [
          &quot;string&quot;
        ],
        &quot;port&quot;: 0
      },
      &quot;acceptEula&quot;: true,
      &quot;id&quot;: &quot;string&quot;,
      &quot;_id&quot;: &quot;string&quot;,
      &quot;version&quot;: 0
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

